5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1638_2728.log
== TEST (2019-04-11 11:23:19) 
-- CODE:
percurso=float(input());
tipo=input().upper();

if(tipo=="A"):
	gasto=percurso/8;
	print(round(gasto,2));
if(tipo=="B"):
	gasto=percuso/12;
	print(round(gasto,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gasto=percuso/12;
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:23:26) 
-- CODE:
percurso=float(input());
tipo=input().upper();

if(tipo=="A"):
	gasto=percurso/8;
	print(round(gasto,2));
if(tipo=="B"):
	gasto=percuso/12;
	print(round(gasto,2))
-- EXECUTION TIME:
0.191447
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2728/main.py", line 8, in <module>
    gasto=percuso/12;
NameError: name 'percuso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:43) 
-- CODE:
percurso=float(input());
tipo=input().upper();

if(tipo=="A"):
	gasto=percurso/8;
	print(round(gasto,2));
if(tipo=="B"):
	gasto=percuso/12;
	print(round(gasto,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gasto=percuso/12;
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:24:14) 
-- CODE:
percurso=float(input());
tipo=input().upper();

if(tipo=="A"):
	gasto=percurso/8;
	print(round(gasto,2));
if(tipo=="B"):
	gasto=percurso/12;
	print(round(gasto,2))
-- EXECUTION TIME:
0.181214
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
